welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:27: error: not found: value color
setCouleurBrosse(color.green);
                 ^Runner:34: error: not found: value color
setCouleurBrosse(color.yellow);
                 ^Runner:41: error: not found: value color
setCouleurBrosse(color.orange);
                 ^Runner:48: error: not found: value color
setCouleurBrosse(color.red);
                 ^Runner:55: error: not found: value color
setCouleurBrosse(color.magenta);
                 ^Runner:62: error: not found: value color
setCouleurBrosse(color.pink);
                 ^