welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()){
	setCouleurBrosse(Color.lightGray);
	baisseBrosse();
	avance();
}

leveBrosse();
gauche();
avance();
droite();
setCouleurBrosse(Color.blue);
avance();
baisseBrosse();

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(Color.cyan);

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(color.green);

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(color.yellow);

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(color.orange);

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(color.red);

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(color.magenta);

leveBrosse();
gauche();
avance();
droite();
avance();
setCouleurBrosse(color.pink);

for (i<- 1 to 4) {
	avance();
}





